--- a/cart.html
+++ b/cart.html
@@ -93,7 +93,7 @@
     <p class="totalPrice">Total Price: ₦<span id="totalPrice">0.00</span></p>
     <button class="cart-button" onclick="deleteAllItems()">Delete All Items</button>
     <button class="cart-button" onclick="goToShopPage()">Go to Shopping</button>
-    <button class="cart-button" onclick="checkout()">Checkout</button>
+    <a href="./checkOut.html"><button class="cart-button" onclick="">Checkout</button></a>
 </div>
   
                         <!-- footer -->
