Added Working Hours

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -180,6 +180,7 @@
             <p>Thinkers Corner Enugu State.</p>
             <p>Phone: +2348140922048</p>
             <p>Email: zempaastores.ng@gmail.com</p>
+            <p>opens by 8am - 7pm everyday</p>
         </div>
     
         <div class="footer-section quick-links">
