Added ekene's image to website

--- a/About.html
+++ b/About.html
@@ -104,7 +104,7 @@
                 <img src="./images/chrismember.jpg" alt="Founder - John Doe">
                <div class="status">
                 <h3 class="darkmodeColor">Obi Christopther</h3>
-                <p>Founder & CEO</p>
+                <p>Founder</p>
                </div> 
             </div>
         
@@ -112,7 +112,7 @@
                 <img src="images/member5.jpg" alt="Marketing Director - Jane Smith">
                <div class="status">
                 <h3 class="darkmodeColor">Izundu Chukwuemika</h3>
-                <p>Founder & CEO</p>
+                <p>Founder</p>
                 </div>
             </div>
 
@@ -120,11 +120,19 @@
                 <img src="images/member.jpg" alt="Marketing Director - Jane Smith">
                <div class="status">
                 <h3 class="darkmodeColor">Damian Paschal</h3>
-                <p>Founder & CEO</p>
+                <p>Founder</p>
                 </div>
             </div>
+        
         </div>
 
+        <div class="team-member ekene">
+            <img src="images/ekene.jpg" alt="Marketing Director - Jane Smith">
+           <div class="status">
+            <h3 class="darkmodeColor">Izundu Ekene</h3>
+            <p>Co-Founder</p>
+            </div>
+    </div>
         <!-- <abbr title="Zempaa University E-Commerce is an innovative platform committed to providing the university community with a convenient and secure online marketplace for a diverse range of university-branded merchandise and academic essentials."></abbr>
 
         <br><br>
