--- a/Contact.html
+++ b/Contact.html
@@ -164,17 +164,23 @@
     <div class="people">
         <div>
            <img src="images/chrismember.jpg" alt="">
-            <p><span class="spanFormDetails">Obi Christopher</span> CEO <br> Phone:+2348034858899
+            <p><span class="spanFormDetails">Obi Christopher</span> Founder <br> Phone:+2348034858899
             <br> E-mail: contact@example.com</p>
         </div>
         <div>
             <img src="images/member5.jpg" alt="">
-            <p><span class="spanFormDetails">Izundu Chukwuemika</span> CEO <br> Phone:+2348067020765
+            <p><span class="spanFormDetails">Izundu Chukwuemika</span> Founder <br> Phone:+2348067020765
             <br> E-mail: contact@example.com</p>
         </div>
         <div>
             <img src="images/member.jpg" alt="">
-            <p><span class="spanFormDetails">Damian Paschal</span>CEO <br> Phone:+2348140922048
+            <p><span class="spanFormDetails">Damian Paschal</span> Founder <br> Phone:+2348140922048
+            <br> E-mail: contact@example.com</p>
+        </div>
+
+        <div>
+            <img src="images/ekene.jpg" alt="">
+            <p><span class="spanFormDetails">Izundu Ekene</span> Co-Founder <br> Phone:++2349160729200
             <br> E-mail: contact@example.com</p>
         </div>
     </div>
