--- a/index.html
+++ b/index.html
@@ -1544,8 +1544,10 @@
         </section>
 
         <section class="shoppingVideo">
-                <iframe autoplay loop class="shopvideo" width="100%" height="360" src="https://www.youtube.com/embed/hS32fWMjbDk" ></iframe>
+                <!-- <iframe autoplay loop class="shopvideo" width="100%" height="360" src="https://www.youtube.com/embed/hS32fWMjbDk" ></iframe> -->
             <!-- https://youtu.be/hS32fWMjbDk -->
+            <iframe id="shopVideo"  autoplay  loop   src="./images/zempaa-video.mp4" width="100%" height="360"></iframe>
+
         </section>
         
         
