--- a/shop.html
+++ b/shop.html
@@ -1525,9 +1525,11 @@
         </section>
 
         <section class="shoppingVideo">
-                <iframe autoplay loop class="shopvideo" width="100%" height="360" src="https://www.youtube.com/embed/hS32fWMjbDk" ></iframe>
-            <!-- https://youtu.be/hS32fWMjbDk -->
-        </section>
+            <!-- <iframe autoplay loop class="shopvideo" width="100%" height="360" src="https://www.youtube.com/embed/hS32fWMjbDk" ></iframe> -->
+        <!-- https://youtu.be/hS32fWMjbDk -->
+        <iframe id="shopVideo"  autoplay  loop   src="./images/zempaa-video.mp4" width="100%" height="360"></iframe>
+
+    </section>
         
         
          <!-- back to school deals section -->
