adjusted the iframe video

--- a/About.html
+++ b/About.html
@@ -86,11 +86,9 @@
     </section>
 
     <section class="shoppingVideo">
-        <!-- <iframe autoplay loop class="shopvideo" width="100%" height="360" src="https://www.youtube.com/embed/hS32fWMjbDk" ></iframe> -->
-    <!-- https://youtu.be/hS32fWMjbDk -->
-    <iframe id="shopVideo"  autoplay  loop   src="./images/zempaa-video.mp4" width="100%" height="360"></iframe>
+        <iframe style="border-radius: 10px;" id="shopVideo"  frameborder="0" autoplay  loop   src="./images/zempaa-video.mp4" width="100%" height="360"></iframe>
+    </section>
 
-</section>
 
     <section class="aboutUsPages">
         <div class="containerAbout">        
